--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Raymond Li</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about/">About me</a></li>
+        		<li><a href="/Projects">Projects</a></li>
+        		<li><a href="/CV">Resume</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+        		<h1>Raymond Li</h1>
+		</div>
+		<footer>
+    		<ul>
+        		<p id="email">Email: ruhanli168@gmail.com</p>
+        		<li><a href="https://github.com/raymoondo">My Github Page</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
