--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<footer>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
-        		<li><a href="https://github.com/raymoondo">My Github Page</a></li>
+        		<li><a href="https://github.com/raymoondo">RuhanLi</a></li>
 			</ul>
 		</footer>
 	</body>
