--- a/about.html
+++ b/about.html
@@ -14,8 +14,10 @@
     		</ul>
 		</nav>
 		<div class="container">
-        		<h1>Raymond Li</h1>
+        		<h1>About Me</h1>
 		</div>
+			<p My name is Raymond Li. I am currently 19 years old and in my 2A term at the University of Waterloo studying 
+			Computing and Financial Management.</p>
 		<footer>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
