--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="home.html">Home</a></li>
 	        	<li><a href="/about/">About me</a></li>
         		<li><a href="/Projects">Projects</a></li>
         		<li><a href="/CV">Resume</a></li>
