--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 		<div class="container">
         		<h1>About Me</h1>
 		</div>
-	<p id="aboutme" My name is Raymond Li. I am currently 19 years old
+	<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
 	and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
 		<footer>
     		<ul>
