--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     		<ul>
         		<li><a href="index.html">Home</a></li>
 	        	<li><a href="/about/">About me</a></li>
-        		<li><a href="/Projects">Projects</a></li>
+        		<li><a href="projects.html">Projects</a></li>
         		<li><a href="/CV">Resume</a></li>
     		</ul>
 		</nav>
