--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="about.html">About me</a></li>
+	        	<li><a href="/about/">About me</a></li>
         		<li><a href="projects.html">Projects</a></li>
         		<li><a href="/CV">Resume</a></li>
     		</ul>
