--- a/index.html
+++ b/index.html
@@ -1,26 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Raymond Li</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About me</a></li>
-        		<li><a href="projects.html">Projects</a></li>
-        		<li><a href="/CV">Resume</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-        		<h1>Raymond Li</h1>
-		</div>
-		<footer>
-    		<ul>
-        		<p id="email">Email: ruhanli168@gmail.com</p>
-        		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div>
