--- a/about/index.html
+++ b/about/index.html
@@ -1,60 +1,28 @@
-body {
-    margin: 60px auto;
-    width: 70%;
-    background-color: #173e43;
-}
-
-
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    color: #e9ece5;
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #F8F1F1;
-}
-
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
-}
-
-#email {
-    font-size: 1em;
-    color: #e8edf3;
-}
-
-#aboutme {
-    font-size: 1em;
-    font-style: oblique;
-    color: #F8F1F1;
-}
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Raymond Li</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About me</a></li>
+        		<li><a href="projects.html">Projects</a></li>
+        		<li><a href="/CV">Resume</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+        		<h1>About Me</h1>
+		</div>
+	<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
+	and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
+		<footer>
+    		<ul>
+        		<p id="email">Email: ruhanli168@gmail.com</p>
+        		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
