--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+	<style>
+	.mySlides {display:none}
+	.w3-left, .w3-right, .w3-badge {cursor:pointer}
+	.w3-badge {height:13px;width:13px;padding:0}
+	</style>
 	<head>
 		<title>Raymond Li</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
