--- a/projects/index.html
+++ b/projects/index.html
@@ -24,7 +24,7 @@
         		<h1>Projects</h1>
 		</div>
 			<div class="w3-content w3-display-container" style="max-width:800px">
-			<img class="mySlides" src="img_nature_wide.jpg" style="width:100%">
+			<img class="mySlides" src="img_car.jpg" style="width:100%">
 		 	<img class="mySlides" src="img_fjords_wide.jpg" style="width:100%">
 		 	<img class="mySlides" src="img_mountains_wide.jpg" style="width:100%">
 		 	<div class="w3-center w3-section w3-large w3-text-white w3-display-bottomleft" style="width:100%">
