--- a/CV/index.html
+++ b/CV/index.html
@@ -16,6 +16,7 @@
 		<div class="container">
         		<h1>Resume</h1>
 		</div>
+		<p id="email">Resume: <a href="/CV/resume.pdf">Download</a></p>
 		<footer>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
