--- a/CV/index.html
+++ b/CV/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
         		<h1>Resume</h1>
 		</div>
-		<p id="email">Resume: <a href="/CV/Resume-Comp sci - Updated.pdf">Download</a></p>
+		<p id="email">Resume: <a href="/CV/Resume-Comp sci - Updated.pdf">2016/06/22</a></p>
 		<footer>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
