--- a/projects/index.html
+++ b/projects/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-	<style>
-	.mySlides {display:none}
-	.w3-left, .w3-right, .w3-badge {cursor:pointer}
-	.w3-badge {height:13px;width:13px;padding:0}
-	</style>
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<body>
+
+<h2 class="w3-center">Manual Slideshow</h2>
+
+<div class="w3-content" style="max-width:800px;position:relative">
+
+<img class="mySlides" src="img_fjords.jpg" style="width:100%">
+<img class="mySlides" src="img_lights.jpg" style="width:100%">
+<img class="mySlides" src="img_mountains.jpg" style="width:100%">
+<img class="mySlides" src="img_forest.jpg" style="width:100%">
+
+<a class="w3-btn-floating" style="position:absolute;top:45%;left:0" onclick="plusDivs(-1)">❮</a>
+<a class="w3-btn-floating" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
+
+</div>
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
 	<head>
 		<title>Raymond Li</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -23,49 +53,6 @@
 		<p id="email"> Employee Database:<a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
 		<div class="container">
         		<h1>Projects</h1>
-		</div>
-			<div class="w3-content w3-display-container" style="max-width:800px">
-			<img class="mySlides" src="img_car.jpg" style="width:100%">
-		 	<img class="mySlides" src="img_fjords_wide.jpg" style="width:100%">
-		 	<img class="mySlides" src="img_mountains_wide.jpg" style="width:100%">
-		 	<div class="w3-center w3-section w3-large w3-text-white w3-display-bottomleft" style="width:100%">
-			<div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-			<div class="w3-right w3-padding-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-			<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-			<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-    			<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-  			</div>
-		</div>
-
-		<script>
-		var slideIndex = 1;
-		showDivs(slideIndex);
-		
-		function plusDivs(n) {
-		  showDivs(slideIndex += n);
-		}
-		
-		function currentDiv(n) {
-		  showDivs(slideIndex = n);
-		}
-		
-		function showDivs(n) {
-		  var i;
-		  var x = document.getElementsByClassName("mySlides");
-		  var dots = document.getElementsByClassName("demo");
-		  if (n > x.length) {slideIndex = 1}
-		  if (n < 1) {slideIndex = x.length}
-		  for (i = 0; i < x.length; i++) {
-		     x[i].style.display = "none";
-		  }
-		  for (i = 0; i < dots.length; i++) {
-		     dots[i].className = dots[i].className.replace(" w3-white", "");
-		  }
-		  x[slideIndex-1].style.display = "block";
-		  dots[slideIndex-1].className += " w3-white";
-		}
-		</script>
-		<footer>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
         		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
