--- a/projects/index.html
+++ b/projects/index.html
@@ -16,9 +16,10 @@
         		<li><a href="/CV">Resume</a></li>
     		</ul>
 		</nav>
-		<p id="email"> Employee Database:<a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
 		<div class="container">
         		<h1>Projects</h1>
+        	</div>
+        	<p> Employee Database:<a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
         		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
