--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 	<head>
-		<title>Raymond Li</title>
+		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
@@ -18,6 +18,7 @@
         		<h1>Projects</h1>
         	</div>
         	<p> Employee Database: <a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
+        	<footer>
     		<ul>
         		<p id="email">Email: ruhanli168@gmail.com</p>
         		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
