--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,13 @@
 	</head>
 	<body>
 		<nav>
+			
+		<ul>
+  			<li><a href="/">Home</a></li>
+  			<li><a class="active" href="/about">About</a></li>
+  			<li><a href="/projects">Projects</a></li>
+  			<li><a href="/CV">Resume</a></li>
+		</ul>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About me</a></li>
