--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 			
 		<ul>
   			<li><a href="/">Home</a></li>
-  			<li><a class="active" href="/about">About</a></li>
+  			<li><a class="active" href="/about">About Me</a></li>
   			<li><a href="/projects">Projects</a></li>
   			<li><a href="/CV">Resume</a></li>
 		</ul>
