--- a/projects/index.html
+++ b/projects/index.html
@@ -8,11 +8,11 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About me</a></li>
-        		<li><a href="/projects">Projects</a></li>
-        		<li><a href="/CV">Resume</a></li>
-    		</ul>
+  			<li><a href="/">Home</a></li>
+  			<li><a href="/about">About Me</a></li>
+  			<li><a class="active" href="/projects">Projects</a></li>
+  			<li><a href="/CV">Resume</a></li>
+		</ul>
 		</nav>
 		<div class="container">
         		<h1>Projects</h1>
