--- a/about/index.html
+++ b/about/index.html
@@ -19,9 +19,9 @@
 		</div>
 		<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
 		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
-		<footer>
+		<div id="footer">
         		<p id="email">Email: ruhanli168@gmail.com</p>
         		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
-		</footer>
+		</div>
 	</body>
 </html>
