--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
 		<div id="footer">
         		<p id="email">
         			Email: ruhanli168@gmail.com
-        			<li><a href="https://github.com/RuhanLi">Github Page</a></li>
+        			<a href="https://github.com/RuhanLi">Github Page</a>
         		</p>
 		</div>
 	</body>
