--- a/about/index.html
+++ b/about/index.html
@@ -20,10 +20,9 @@
 		<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
 		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
 		<div id="footer">
-        		<p id="email">
-        			Email: ruhanli168@gmail.com
-        			<a href="https://github.com/RuhanLi">Github Page</a>
-        		</p>
+        		<p id="email">Email: ruhanli168@gmail.com</p>
+        		<p id="gitlink"><a href="https://github.com/RuhanLi">Github Page</a> </p>
+
 		</div>
 	</body>
 </html>
