--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
 		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
 		<div id="footer">
         		<p id="email">Email: ruhanli168@gmail.com</p>
-        		<p id="gitlink"><a href="https://github.com/RuhanLi">Github Page</a> </p>
+        		<p id="githublink"><a href="https://github.com/RuhanLi">Github Page</a> </p>
 
 		</div>
 	</body>
