--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,8 @@
 		<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
 		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
 		<div id="footer">
-        		<p>Email: ruhanli168@gmail.com                
+        		<p>Email: ruhanli168@gmail.com 
+        		&nbsb;
         		<a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
 		</div>
