--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,7 @@
 		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
 		<div id="footer">
 			<pre>
-        		<p>Email: ruhanli168@gmail.com &nbsp;
-        		<a href="https://github.com/RuhanLi">Github Page</a> 
+        		<p>Email: ruhanli168@gmail.com &nbsp;<a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
         		</pre>
 		</div>
