--- a/about/index.html
+++ b/about/index.html
@@ -19,11 +19,11 @@
 		</div>
 		<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
 		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
-		<div id="footer">
+		<footer>
 			<pre>
         		<p>Email: ruhanli168@gmail.com &nbsp;<a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
         		</pre>
-		</div>
+		</footer>
 	</body>
 </html>
