--- a/projects/index.html
+++ b/projects/index.html
@@ -19,10 +19,8 @@
         	</div>
         	<p> Employee Database: <a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
         	<footer>
-    		<ul>
-        		<p id="email">Email: ruhanli168@gmail.com</p>
-        		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
-		</ul>
+        		<p>Email: ruhanli168@gmail.com &nbsp; &nbsp; <a href="https://github.com/RuhanLi">Github Page</a> 
+        		</p>
 		</footer>
 	</body>
 </html>
