--- a/CV/index.html
+++ b/CV/index.html
@@ -18,10 +18,8 @@
 		</div>
 		<p id="email">Resume: <a href="/CV/Resume-Comp sci - Updated.pdf">2016/06/22</a></p>
 		<footer>
-    		<ul>
-        		<p id="email">Email: ruhanli168@gmail.com</p>
-        		<li><a href="https://github.com/RuhanLi">Github Page</a></li>
-			</ul>
+        		<p>Email: ruhanli168@gmail.com &nbsp; &nbsp; <a href="https://github.com/RuhanLi">Github Page</a> 
+        		</p>
 		</footer>
 	</body>
 </html>
