--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,13 @@
 	<head>
 		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<style>
+			.empdata{
+				width: 640px;
+				height: 480px;
+				display: inline-block;
+			}
+		</style>
 	</head>
 	<body>
 		<nav>
@@ -18,6 +25,9 @@
         		<h1>Projects</h1>
         	</div>
         	<p> Employee Database: <a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
+        	<img class="empdata" src="emp1.png">
+        	<img class="empdata" src="emp2.png">
+        	<img class="empdata" src="emp3.png">
         	<footer>
         		<p>Email: ruhanli168@gmail.com &nbsp; &nbsp; <a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
