--- a/projects/index.html
+++ b/projects/index.html
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
 			.empdata{
-				width: 640px;
-				height: 480px;
-				display: inline-block;
+				width: 320px;
+				height: 240px;
+				display: table;
 			}
 		</style>
 	</head>
