--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,7 @@
         		<h1>Projects</h1>
         	</div>
         	<p> Employee Database: <a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
+        	<p>Pictures: </p>
         	<img class="empdata" src="emp1.png">
         	<img class="empdata" src="emp2.png">
         	<img class="empdata" src="emp3.png">
