--- a/projects/index.html
+++ b/projects/index.html
@@ -5,10 +5,19 @@
 		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
-			.empdata{
+			#emp1{
 				width: 320px;
 				height: 240px;
-				display: block;
+				position: relative:;
+				top: 5px;
+				left: 0;
+			}
+			#emp2{
+				width: 320px;
+				height: 200px;
+				position: relative:;
+				top: 5px;
+				left: 320px;
 			}
 		</style>
 	</head>
@@ -26,9 +35,9 @@
         	</div>
         	<p> Employee Database: <a href="https://github.com/RuhanLi/EmployeeDatabase">GitHub Link</a></p>
         	<p>Pictures: </p>
-        	<img class="empdata" src="emp1.png">
-        	<img class="empdata" src="emp2.png">
-        	<img class="empdata" src="emp3.png">
+        	<img id="emp1" src="emp1.png">
+        	<img id="emp2" src="emp2.png">
+        	<img id="emp3" src="emp3.png">
         	<footer>
         		<p>Email: ruhanli168@gmail.com &nbsp; &nbsp; <a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
