--- a/projects/index.html
+++ b/projects/index.html
@@ -19,6 +19,13 @@
 				top: 5px;
 				left: 320px;
 			}
+			#emp3{
+				width: 320px;
+				height: 240px;
+				position: relative:;
+				top: 5px;
+				left: 640px;
+			}
 		</style>
 	</head>
 	<body>
