--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<body>
 	<head>
 		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -9,22 +8,22 @@
 				width: 320px;
 				height: 240px;
 				position: relative:;
-				top: 5px;
+				top: 0;
 				left: 0;
 			}
 			#emp2{
 				width: 320px;
 				height: 200px;
 				position: relative:;
-				top: 5px;
-				left: 320px;
+				top: 0;
+				left: 640px;
 			}
 			#emp3{
 				width: 320px;
 				height: 240px;
-				position: relative:;
-				top: 5px;
-				left: 640px;
+				position: relative;
+				top: 0;
+				left: 320px;
 			}
 		</style>
 	</head>
