--- a/projects/index.html
+++ b/projects/index.html
@@ -16,14 +16,14 @@
 				height: 180px;
 				position: relative:;
 				top: 0;
-				left: 640px;
+				left: 1;
 			}
 			#emp3{
 				width: 320px;
 				height: 240px;
 				position: relative;
 				top: 0;
-				left: 320px;
+				left: 1;
 			}
 		</style>
 	</head>
