--- a/projects/index.html
+++ b/projects/index.html
@@ -15,15 +15,15 @@
 				width: 320px;
 				height: 180px;
 				position: relative:;
-				top: 0;
-				left: 1;
+				top: -240px;
+				left: 1px;
 			}
 			#emp3{
 				width: 320px;
 				height: 240px;
 				position: relative;
 				top: 0;
-				left: 1;
+				left: 1px;
 			}
 		</style>
 	</head>
