--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-	</head>
-	
-	<body>
+---
+layout: default
+title: Homepage
+---
 		<div class="blurb">
 			<h1>Ruhan Li</h1>
 		</div>
-		
-		<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
-		<script>
-		</script>
-	</body>
-
-</html>
