--- a/index.html
+++ b/index.html
@@ -5,3 +5,26 @@ title: Homepage
 		<div class="blurb">
 			<h1>Ruhan Li</h1>
 		</div>
+		<div id="weather">
+
+</div>
+		<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
+		<script>$(document).ready(function() {
+  $.simpleWeather({
+    location: 'Toronto, ON',
+    woeid: '',
+    unit: 'c',
+    success: function(weather) {
+      html = '<h4> '+weather.temp+'&deg;'+weather.units.temp;
+      html += '<button class=\"weatherButton\">'+weather.city+', '+weather.region+'</button>';
+      html += '<button class=\"weatherButton\">'+weather.currently+'</button>';
+      html += '<button class=\"weatherButton\">'+weather.wind.chill+'</button></h4>';
+  
+      $("#weather").html(html);
+    },
+    error: function(error) {
+      $("#weather").html('<p>'+error+'</p>');
+    }
+  });
+});</script>
