--- a/about/index.html
+++ b/about/index.html
@@ -17,8 +17,8 @@
 		<div class="container">
         		<h1>About Me</h1>
 		</div>
-		<p id="aboutme"> My name is Raymond Li. I am currently 19 years old
-		and in my 2A term at the University of Waterloo studying Computing and Financial Management.</p>
+		<p id="aboutme"> My name is Raymond Li. I am currently 24 years old
+		and working as a Business Systems Consultant for CIBC Capital Markets. I graduated from the University of Waterloo and am currently pursuing an MBA in the Rotman program at the University of Toronto</p>
 		<footer>
         		<p>Email: ruhanli168@gmail.com &nbsp; &nbsp; <a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
